--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">MyflightInfo</string>
     <string name="greatingtext">Hi!</string>
+    <string name="error_message">Failed to get results, please try again.</string>
+    <string name="add_to_my_favorites">Add to my favorites</string>
     <string name="title_activity_contact">ContactActivity</string>
     <string name="title_activity_flight">FlightActivity</string>
     <string name="title_activity_weather">WeatherActivity</string>
